[package]
name = "epiphyte"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
clap = { version = "4.5.48", features = ["derive"] }
dll-syringe = { version = "0.16.0", features = ["rpc-core", "rpc-raw"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
