[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
] }

[lib]
crate-type = ["cdylib"]
